SynProdGITV1/force-app/main/default/objects/Product_Conversions_Data__c/Product_Conversions_Data__c.object-meta.xml
<CustomObject>
    <label>Product Conversions Data</label>
    <nameField>
        <displayFormat>PCD-{0000000}</displayFormat>
        <label>Product Conversions Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Conversions Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>