SynProdGITV1/force-app/main/default/objects/Product_Conversions_Data__c/fields/Alternative_Unit__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Alternative Unit</label>
    <referenceTo>UoM_Std_Data__c</referenceTo>
    <relationshipLabel>Product Conversions Data</relationshipLabel>
    <relationshipName>Product_Conversions_Data</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>