SynProdGITV1/force-app/main/default/objects/Product_Conversions_Data__c/fields/Denominator__c.field-meta.xml
<CustomField>
    <fullName>Denominator__c</fullName>
    <label>Denominator</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>