SynProdGITV1/force-app/main/default/objects/Product_Conversions_Data__c/fields/Numerator__c.field-meta.xml
<CustomField>
    <fullName>Numerator__c</fullName>
    <label>Numerator</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>