SynProdGITV1/force-app/main/default/objects/Product_Conversions_Data__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Conversions Data (Product)</relationshipLabel>
    <relationshipName>Product_Conversions_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>