SynProdGITV1/force-app/main/default/objects/Product_Conversions_Data__c/fields/Product_Conversion_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Conversion_Ext_ID__c</fullName>
    <description>Combination of Product ID and Alternative Unit Code ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination of Product ID and Alternative Unit Code ID</inlineHelpText>
    <label>Product Conversion Ext ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>